[package]
name = "file_rename_tool"
version = "0.0.1"
authors = ["darenliang@outlook.com <darenliang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.8.0"

[dependencies.gio]
version = "0.8.0"

[dependencies.gdk]
version = "0.12.0"